single templates directory, added form for search

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <title>NYU Bathroom Finder</title>
     <link
       rel="stylesheet"
-      href="{{ url_for('static', filename='css/search.css') }}"
+      href="{{ url_for('static', filename='css/styles.css') }}"
     />
   </head>
   <body>
