--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %} {% block container %}
-
+<h1>Welcome to NYU Bathroom Finder!</h1>
+<p>Please submit the form to login. Not officially offiliated with NYU 😈.</p>
+<hr>
+        
 <form action="">
     <button type="submit" class="login-btn">Login</button>
     <br>
