--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %} {% block container %}
 
+<h1>Welcome to NYU Bathroom Finder!</h1>
+<p>Please submit the form to login. Not officially offiliated with NYU 😈.</p>
+<hr>
+
 <h1>Welcome back!</h1>
 <p>Please submit the form to login.</p>
 <hr>
