--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %} {% block container %}
 
+<h1>Welcome to NYU Bathroom Finder!</h1>
+<p>Please submit the form to login. Not officially offiliated with NYU 😈.</p>
+<hr>
+
 <h1>Sign Up</h1>
 <p>Please fill in this form to create an account.</p>
 <hr>
