add comment working

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,11 +4,10 @@
     <title>NYU Bathroom Finder</title>
     <link
       rel="stylesheet"
-      href="{{ url_for('static', filename='css/styles.css') }}"
+      href="{{ url_for('static', filename='styles/styles.css') }}"
     />
   </head>
   <body>
       <main>{% block container %} {% endblock %}</main>
-    </div>
   </body>
 </html>
