--- a/templates/restroom.html
+++ b/templates/restroom.html
@@ -26,7 +26,7 @@
 <form method="POST" action="{{ url_for('add_comment') }}">
 
     <label for="comment"><b>Comment</b></label><br>
-    <input type="text" placeholder="Enter comment" name="comment" required>
+    <input type="text" class="comment" placeholder="Enter comment" name="comment" required>
 
     <br>
 
