--- a/templates/buildings.html
+++ b/templates/buildings.html
@@ -3,8 +3,10 @@
 {% block container %}
 <h1>Search by building first</h1>
 <hr>
-<form action="">
+<form method="POST" action="{{ url_for('get_choice') }}">
+
     <label for="building"><b><h2>Choose a building</h2></b></label>
+
     <select id="buildings" name="buildings">
       <option value="kimmel">Kimmel Center for University Life</option>
       <option value="bobst">Elmer Holmes Bobst Library</option>
@@ -14,8 +16,17 @@
       <option value="tandon">Tandon School of Engineering</option>
       <option value="slc-brooklyn">Student Link Center - Brooklyn</option>
     </select>
+
     <br>
     <br>
     <input type="submit" class="search-btn" value="Search">
+
 </form>
+
+<br><br>
+<p> <a href="{{  url_for('add_new') }}"> Add Restroom </a></p>
+<br><br>
+<p> <a href="{{ url_for('get_profile') }}"> My Profile </a></p>
+
+
 {% endblock %}
