--- a/templates/floors.html
+++ b/templates/floors.html
@@ -3,9 +3,11 @@
 {% block container %}
 <h1>Search by floor now</h1>
 <hr>
-<form action="">
+<form method="POST" action="{{ url_for('get_choice2') }}">
+
     <label for="floor"><b><h2>Choose a floor</h2></b></label>
-    <select id="floors" name="floors">
+
+    <select id="floors" name="floorNum">
         <option value="floor-1">Floor 1</option>
         <option value="floor-2">Floor 2</option>
         <option value="floor-3">Floor 3</option>
@@ -14,8 +16,11 @@
         <option value="floor-6">Floor 6</option>
         <option value="floor-7">Floor 7</option>
     </select>
+
     <br>
     <br>
     <input type="submit" class="search-btn" value="Search">
+
 </form>
+
 {% endblock %}
