--- a/templates/login.html
+++ b/templates/login.html
@@ -1,21 +1,39 @@
 {% extends 'base.html' %} {% block container %}
 
 <h1>Welcome to NYU Bathroom Finder!</h1>
-<p>Please submit the form to login. Not officially offiliated with NYU 😈.</p>
+<p>Please submit the form to login</p>
 <hr>
 
 <h1>Welcome back!</h1>
 <p>Please submit the form to login.</p>
 <hr>
 
-<form action="">
-    <label for="email"><b>Email</b></label><br>
-    <input type="text" placeholder="Enter Email" name="email" required>
+<p class="error">Invalid username or password</p>
+
+<form method="POST" action="{{ url_for('process_login') }}">
+
+    <label for="user"><b>Username</b></label><br>
+    <input type="text" placeholder="Enter username" name="us" required>
+
     <br>
+
     <label for="psw"><b>Password</b></label><br>
     <input type="password" placeholder="Enter Password" name="psw" required>
+
     <br>
+
     <button type="submit" class="login-btn">Login</button>
+
 </form>
+
+<script> 
+    if ( '{{ error }}' == '1' ) {
+        document.getElementsByClassName("error")[0].style.display = "block";
+    }
+
+    else {
+        document.getElementsByClassName("error")[0].style.display = "none";
+    }
+</script>
 
 {% endblock %}
