--- a/templates/profile.html
+++ b/templates/profile.html
@@ -16,6 +16,9 @@
 <div class="user_comments"> 
     <p class="where"> {{com.building}}, Floor {{com.floor}} </p>
     <p class="message"> {{com.text}} </p>
+    <nav class="controls">
+       <a href="{{ url_for('delete', comment_id=doc._id)}}">Delete</a>
+    </nav>
 </div>
 {%endfor%}
 
