--- a/templates/profile.html
+++ b/templates/profile.html
@@ -17,7 +17,7 @@
     <p class="where"> {{com.building}}, Floor {{com.floor}} </p>
     <p class="message"> {{com.text}} </p>
     <nav class="controls">
-       <a href="{{ url_for('delete', comment_id=doc._id)}}">Delete</a>
+        <a href="{{ url_for('edit', comment_id=com._id)}}">Edit</a> | <a href="{{ url_for('delete', comment_id=com._id)}}">Delete</a>
     </nav>
 </div>
 {%endfor%}
