--- a/templates/floors.html
+++ b/templates/floors.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %} 
 
 {% block container %}
-<h1>Search by floor now</h1>
+<h1>Search By Floor</h1>
 <hr>
 <form method="POST" action="{{ url_for('get_choice2') }}">
 
-    <label for="floor"><b><h2>Choose a floor</h2></b></label>
+    <label for="floor"><b><h2>Pick a Floor</h2></b></label>
 
     <select id="floors" name="floorNum">
         <option value="floor-1">Floor 1</option>
