--- a/templates/profile.html
+++ b/templates/profile.html
@@ -2,24 +2,29 @@
 
 <h1> My Profile </h1>
 
-<h2 id="name"> {{user.first}} {{user.last}} </h2>
+<div id="profileDetails">
+    <h2 id="name"> {{user.first}} {{user.last}} </h2>
+    <h3 id="user"> Username: {{user.username}} </h3>
+    <h3 id="email"> Email: {{user.email}} </h3>
+    <a href="editProfile.html"> Edit Profile </a>
+</div>
+<br>
+<br>
 
-<h3 id="user"> Username: {{user.username}} </h3>
-
-<h3 id="email"> Email: {{user.email}} </h3>
-
-<a href="editProfile.html"> Edit Profile </a>
-
-<h2> My Comments </h2>
-
+<hr>
+<h1> My Comments </h1>
 {% for com in coms %}
 <div class="user_comments"> 
+
     <p class="where"> {{com.building}}, Floor {{com.floor}} </p>
     <p class="message"> {{com.text}} </p>
     <nav class="controls">
         <a href="{{ url_for('edit', comment_id=com._id)}}">Edit</a> | <a href="{{ url_for('delete', comment_id=com._id)}}">Delete</a>
     </nav>
 </div>
+<br>
 {%endfor%}
+<hr>
+<a href="buildings">Return to Search</a>
 
 {% endblock %}
