--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -2,6 +2,17 @@
     text-align: center;
     margin-left: auto;
     margin-right: auto;
+    font-family: Helvetica, sans-serif;
+}
+
+h1 {
+    background-color: purple;
+    color: white;
+    padding: 1rem;
+}
+
+a {
+    font-size: 1.25rem;
 }
 
 form {
@@ -35,4 +46,66 @@ button {
 #buildings, #floors {
     width: 250px;
     height: 50px;
+}
+
+/* PROFILE */
+.user_comments {
+    text-align: left;
+    margin-left: 0;
+    margin-right: 0;
+    border-left: .75rem solid purple;
+    height: 100%;
+}
+
+.where, .controls, .message {
+    text-align: left;
+    padding-left: 1rem;
+}
+
+.controls > a {
+    font-size: .75rem;
+    margin-bottom: .5rem;
+}
+
+.message {
+    font-size: 1.15rem;
+}
+
+#profileDetails {
+    text-align: left;
+    padding-left: 1rem;
+}
+
+#name, #user, #email {
+    text-align: left;
+}
+
+/* BUILDING & FLOOR SEARCH */
+.search-btn {
+    width: auto;
+}
+
+#buildings {
+    width: 50%;
+}
+
+#floors {
+    width: 50%;
+}
+
+/* RESTROOM FOUND */
+#bathroom-found-message {
+    padding: 1rem;
+}
+
+.comment {
+    padding-bottom: 0px;
+    margin-bottom: 0px;
+    width: 50%;
+    margin-top: .75rem;
+}
+
+/* ADD A RESTROOM */
+#loc_b, #loc_f, form > input, #available{
+    width: 50%;
 }
