--- a/templates/buildings.html
+++ b/templates/buildings.html
@@ -1,11 +1,10 @@
 {% extends 'base.html' %} 
 
 {% block container %}
-<h1>Search by building first</h1>
-<hr>
+<h1>Search By NYU Building</h1>
 <form method="POST" action="{{ url_for('get_choice') }}">
 
-    <label for="building"><b><h2>Choose a building</h2></b></label>
+    <label for="building"><b><h3>Pick a Building:</h3></b></label>
 
     <select id="buildings" name="buildings">
       <option value="kimmel">Kimmel Center for University Life</option>
@@ -22,11 +21,11 @@
     <input type="submit" class="search-btn" value="Search">
 
 </form>
-
-<br><br>
-<p> <a href="{{  url_for('add_new') }}"> Add Restroom </a></p>
-<br><br>
-<p> <a href="{{ url_for('get_profile') }}"> My Profile </a></p>
-
+<hr>
+<br>
+<a href="{{  url_for('add_new') }}"> Add Restroom </a>
+<br>
+<br>
+<a href="{{ url_for('get_profile') }}"> My Profile </a>
 
 {% endblock %}
