removed a pair of quotation marks

--- a/templates/restroom.html
+++ b/templates/restroom.html
@@ -8,7 +8,7 @@
 
 
 <h3> Existing Comments: </h3>
-<p class="desc"> <em>"{{cr.desc}}"</em> </p>
+<p class="desc"> <em>{{cr.desc}}</em> </p>
 
 
 {% for com in coms %}
