slight changed to text

--- a/templates/addRestroom.html
+++ b/templates/addRestroom.html
@@ -24,7 +24,7 @@
         <option value="floor-7">Floor 7</option>
     </select>
 
-    <label for="description"><b><h2>Leave a Review:</h2></b></label>
+    <label for="description"><b><h2>Add a Description</h2></b></label>
     <input type="text" placeholder="Enter Description" name="description" required>
 
     <label for="available"><b><h2>Is it open?</h2></b></label>
