--- a/templates/restroom.html
+++ b/templates/restroom.html
@@ -7,10 +7,9 @@
 <h3 id="bathroom-found-message"> Now showing result for restroom at {{b}}, Floor {{f}}</h3>
 
 
+<p class="desc"> Bathroom Description: <em>{{cr.desc}}</em> </p>
+
 <h3> Existing Comments: </h3>
-<p class="desc"> <em>{{cr.desc}}</em> </p>
-
-
 {% for com in coms %}
 <div class="comment"> 
     <p class="author"> {{com.user}} </p>
