Add Back Button to Sign up and Login

--- a/templates/login.html
+++ b/templates/login.html
@@ -26,6 +26,10 @@
 
 </form>
 
+<form action="/">
+    <button class="back-btn">Back</button>
+</a>
+
 <script> 
     if ( '{{ error }}' == '1' ) {
         document.getElementsByClassName("error")[0].style.display = "block";
