--- a/templates/signup.html
+++ b/templates/signup.html
@@ -39,6 +39,10 @@
 
 </form>
 
+<form action="/">
+    <button class="back-btn">Back</button>
+</a>
+
 <script>
     if ( '{{ error }}' == '1' ) {
         document.getElementsByClassName("error")[0].innerHTML = "Passwords do not match";
