Added Logout Button for Profile Page

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -10,6 +10,10 @@
 <br>
 <br>
 
+<form action="/">
+    <button class="logout-btn">Logout</button>
+</a>
+
 <hr>
 <h1> My Comments </h1>
 {% for com in coms %}
